# DistributedSystem_Project

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
Jepsen_Docker/omnipaxos-jepsen/: CHANGELOG.md  README.md  project.clj
Jepsen_Docker/omnipaxos-jepsen/doc/: intro.md
Jepsen_Docker/omnipaxos-jepsen/src/omnipaxos_jepsen/: client.clj  core.clj  nemesis.clj
Jepsen_Docker/omnipaxos-jepsen/store/omnipaxos-crash-recovery/20260315T150638.799+0100/: history.edn  (+4 more)
Jepsen_Docker/omnipaxos-jepsen/test/omnipaxos_jepsen/: core_test.clj
Jepsen_Docker/omnipaxos-kv/: Cargo.toml  server-entrypoint.sh  server-jepsen.dockerfile
Jepsen_Docker/omnipaxos-kv/build_scripts/: docker-compose-jepsen.yml  server-1-jepsen-config.toml  server-2-jepsen-config.toml  server-3-jepsen-config.toml
Jepsen_Docker/omnipaxos-kv/build_scripts/logs/: server-1.json  server-2.json  server-3.json
Jepsen_Docker/omnipaxos-kv/src/: common.rs
Jepsen_Docker/omnipaxos-kv/src/server/: database.rs  http_server.rs  main.rs  server.rs
Maelstrom_Docker/dockerVersion/: Cargo.toml  Dockerfile  bridge.py  command.txt  docker-compose.yml  omni_nemesis_linear_test.py  parse_recovery_logs.py  run-linear-nemesis.sh
Maelstrom_Docker/dockerVersion/build_scripts/: bonus-smoke.sh  bonus_direct_test.py  nemesis.sh  reset-cluster.sh  run-bonus-recovery.sh  run-maelstrom-lin-kv.sh  run-maelstrom-partition.sh  run-nemesis-test.sh  start-cluster.sh  verify-recovery.sh
Maelstrom_Docker/dockerVersion/src/: main.rs
Maelstrom_Simulation/src/: crash_recovery_test.py
src/: crash_recovery_test.py  main.rs
(+33 files in other folders)
