[package]
name    = "kv-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kv-node"
path = "src/main.rs"

[dependencies]
omnipaxos         = "0.2.2"
omnipaxos_storage = "0.2.2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"
rand        = "0.8"
sled        = "0.34"
commitlog   = "0.2"

[profile.release]
opt-level = 3